# rust-ddd

./: .env  Cargo.toml  Settings.toml
migrations/2024-03-25-093955_items_creation/: up.sql
src/: lib.rs  main.rs  schema.rs
src/database/: database.rs  mod.rs  postgres.rs
src/models/: items.rs
src/modules/: mod.rs
src/modules/item_shop/: controller.rs  mod.rs  models.rs
src/settings/: settings.rs
