[package]
name = "rust-ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
config = "0.14.0"
async-trait = "0.1.78"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4", features = ["full"] }